[tool.poetry]
name = "repl_python3_WarriorBot"
version = "0.1.0"
description = ""
authors = ["Wacha <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
tinydb = "^4.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
